live-dashboard -> heatmap
Splitting the heatmap out from the live dashbaord.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,12 +12,12 @@ akka {
 application.secret="Cc0eVK<CaTIWUm2`Y7lM23Cpp11dRiM[ZbZCSg9UZaVuxeLI^7I=vUDnuNr9:U:y"
 
 PROD {
-  clickStream.eventRetentionPeriod=180000
-  host="dashboard.ophan.co.uk"
+  clickStream.eventRetentionPeriod=1800000
+  host="heatmap.ophan.co.uk"
 }
 TEST {
   clickStream.eventRetentionPeriod=1800000
-  host="test-dashboard.ophan.co.uk"
+  host="test-heatmap.ophan.co.uk"
 }
 DEV {
   clickStream.eventRetentionPeriod=900000
